Завершение работы с плотами. Режимы /build, /play. Настройка игровых правил и внешнего вида плота. Локализация.