@@ -1,8 +1,6 @@
 package ru.rstudios.creative1.menu.custom;
 
 import org.bukkit.NamespacedKey;
-import org.bukkit.Sound;
-import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.InventoryClickEvent;
 import org.bukkit.event.inventory.InventoryOpenEvent;
 import org.bukkit.inventory.ItemStack;
@@ -12,36 +10,28 @@ import org.bukkit.persistence.PersistentDataType;
 import ru.rstudios.creative1.menu.ProtectedMultipages;
 import ru.rstudios.creative1.plots.Plot;
 import ru.rstudios.creative1.plots.PlotManager;
+import ru.rstudios.creative1.user.LocaleManages;
 import ru.rstudios.creative1.user.User;
 
-import java.util.LinkedList;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static ru.rstudios.creative1.Creative_1.plugin;
-import static ru.rstudios.creative1.user.LocaleManages.*;
 
-public class MyWorlds extends ProtectedMultipages {
-    public MyWorlds(User user) {
-        super(getLocaleMessage(getLocale(user.player()), "menus.my-worlds.title", false, ""), user);
-    }
-
-    @Override
-    public void onOpen(InventoryOpenEvent event) {
-        ((Player) event.getPlayer()).playSound(event.getPlayer().getLocation(), Sound.ENTITY_PLAYER_LEVELUP, 1.0F, 1.0F);
+public class WorldBrowserMenu extends ProtectedMultipages {
+    public WorldBrowserMenu(User user) {
+        super(LocaleManages.getLocaleMessage(user.getLocale(), "menus.world-browser.title", false, ""), user);
     }
 
     @Override
     public List<ItemStack> getMenuElements() {
-        System.out.println(user.getPlotNames());
-
-        return user.getPlotNames().stream()
-                .map(PlotManager.plots::get)
-                .filter(Objects::nonNull)
+        return PlotManager.plots.values().stream()
+                .filter(plot -> plot.isOpened)
+                .sorted(Comparator.comparingInt((Plot plot) -> plot.online().size()).reversed())
                 .map(Plot::icon)
-                .collect(Collectors.toList());
+                .toList();
     }
+
 
     @Override
     public void onMenuElementClick(InventoryClickEvent event) {
@@ -66,6 +56,11 @@ public class MyWorlds extends ProtectedMultipages {
 
     @Override
     public void fillOther() {
+
+    }
+
+    @Override
+    public void onOpen(InventoryOpenEvent event) {
 
     }
 }
